# fastapi-docker-starter

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-freeze.txt  requirements.txt  scripts.py  service.yaml
app/: config.py  main.py  models.py
app/routers/: background.py  echo.py  files.py
docker/: Dockerfile
scripts/: docker-deploy.sh  docker-run.sh  gcloud-auth-req.sh  gcloud-deploy.sh  gcloud-dev.sh  gcloud-test.sh
tests/: test_main.py
