[tool.poetry]
name = "app"
version = "0.1.0"
description = "Fastapi boilerplate project"
authors = ["byedcg <byedcg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.1"
pylint = "^2.12.2"
requests = "^2.27.1"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "scripts:format"
reformat = "scripts:reformat"
lint = "scripts:lint"
dev = "scripts:dev"
test = "scripts:test"
export = "scripts:poetry_export"
